[package]
name = "brocciu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
rand = "*"
lichess-api = "0.3.0"
serde = {version="*", features=["derive"]}
serde_json= {version="*", default_features=false, features = ["alloc", "raw_value"]}
reqwest = "*"
tokio = { version = "*", features = ["full"] }
tokio-stream = "0.1"
num_cpus = "*"
log="*"
env_logger="*"
project-root="*"
plotters="*"
image="*"

[profile.release]
#debug = true



